feat:lynx-server-darwin
